lab-files/domain-2-cluster-hardening/deploying-ingress/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: example-pod
spec:
  containers:
  - image: nginx
    name: example-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
